facing "not centered" issue

--- a/homework 3/blog.css
+++ b/homework 3/blog.css
@@ -29,6 +29,8 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  border: 1px solid black;
+  width: 600px;
 }
 
 .navbar p{
@@ -37,6 +39,8 @@
 
 #JamesJantz {
   font-size: 60px;
+  margin-top: 10px;
+  margin-bottom: 0px;
 }
 
 .links{
@@ -46,7 +50,7 @@
 }
 
 .links p{
-  margin: 20px;
+  margin: 15px;
 }
 
 .column img{
